# AutoCampusCheckBot

./: Cargo.toml
src/: main.rs
