[package]
name = "auto_campus_check_bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version="0.10.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
regex = "1.5.4"
reqwest = "0.11.5"
serde_urlencoded = "0.7.0"
lazy_static = "1.4.0"
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }